infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: zhuominginfo.dev
      http:
        paths:
          - path: /api/user/?(.*)
            backend:
              serviceName: user-srv
              servicePort: 3000
          - path: /api/forum/post/?(.*)
            backend:
              serviceName: forum-post-srv
              servicePort: 3000
          - path: /api/forum/comment/?(.*)
            backend:
              serviceName: forum-comment-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: ionic-srv
              servicePort: 3000
